--- a/package.json
+++ b/package.json
@@ -2,13 +2,19 @@
   "name": "projeto_redis",
   "version": "1.0.0",
   "description": "Miniprojeto Redis",
-  "main": "main.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Willian Reinaldo",
   "license": "ISC",
   "dependencies": {
-    "nodemon": "^2.0.9"
+    "ejs": "^3.1.6",
+    "express": "^4.17.1",
+    "nodemon": "^2.0.9",
+    "pg": "^8.6.0",
+    "pg-hstore": "^2.3.4",
+    "redis": "^3.1.2",
+    "sequelize": "^6.6.4"
   }
 }
