--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "dependencies": {
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "mysql2": "^2.2.5",
     "nodemon": "^2.0.9",
-    "pg": "^8.6.0",
-    "pg-hstore": "^2.3.4",
+    "promise-redis": "^0.0.5",
     "redis": "^3.1.2",
     "sequelize": "^6.6.4"
   }
