--- a/package.json
+++ b/package.json
@@ -4,17 +4,29 @@
   "description": "Miniprojeto Redis",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "Willian Reinaldo",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "mysql2": "^2.2.5",
     "nodemon": "^2.0.9",
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
     "promise-redis": "^0.0.5",
     "redis": "^3.1.2",
-    "sequelize": "^6.6.4"
-  }
+    "sequelize": "^6.16.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Willreinaldo/miniprojeto-redis.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Willreinaldo/miniprojeto-redis/issues"
+  },
+  "homepage": "https://github.com/Willreinaldo/miniprojeto-redis#readme"
 }
